--- a/AgoraSwiftUIPiP/Info.plist
+++ b/AgoraSwiftUIPiP/Info.plist
@@ -5,6 +5,7 @@
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>audio</string>
+		<string>fetch</string>
 		<string>processing</string>
 		<string>voip</string>
 	</array>
